overflow fix on card titles

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -15,7 +15,7 @@
   font-weight: 500;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
+  overflow: visible;
   color: #212121;
 }
 
